feat: add CategorySpecification class